public/assets/style.css
/* Basics */

:root {
    --text-width: 38.6rem;
    --smaller-text: 0.9rem;
    --text-color: black;
    --background-color: #f8f8f8;
    --details-background-color: #e8e8e8;
    --link-color: DarkBlue;
    font-size: 105%;
    font-family: "Helvetica", "Arial", sans-serif;
    line-height: 1.5;
    overflow: auto;
    background-color: var(--background-color);
    color: var(--text-color);
    color-scheme: light dark;
}

@media (prefers-color-scheme: dark) {
    :root {
        --text-color: rgb(190, 186, 181);
        --background-color: #161718;
        --details-background-color: #242426;
        --highlight-color: rgb(213, 67, 67);
        --link-color: LightBlue;
    }
}

body {
    margin: auto;
    max-width: var(--text-width);
    padding: 0.7em 0.7em;
}

/* Top menu */

header {
    position: fixed;
    width: var(--text-width);
    display: flex;
    justify-content: flex-end;
    gap: 10px;
}

header form {
    display: inline-block;
}

main {
	padding-top: 1.8em;
}

/* Headers */

h1 {
    font-size: 1.5em;
}

h2 {
    font-size: 1.2em;
}

h3 {
    font-size: 1em;
}


/* Links */

a {
    text-decoration: underline;
    color: var(--text-color);
}

a:hover {
    opacity: 0.8;
}

a[href ^= "http"] {
    color: var(--link-color);
}

/* Buttons */

button {
    background-color: var(--background-color);
    color: var(--text-color);
}

/* Tables */

table {
    border-collapse: collapse;
}

table,
th,
td {
    border: 1px solid;
}

th,
td {
    padding: 0.1rem 0.3rem;
}


/* Blocks */

pre {
	font-size: 1em;
}

blockquote {
    border-left: 0.3em solid #CCC;
    font-size: var(--smaller-text);
}

ol, ul, blockquote {
    margin-left: 1em;
    margin-right: 1em;
    padding-left: 1em;
}

/* Result lists */

ul.page-summaries {
    list-style: none;
    padding-left: 0;
    margin-left: 0;
}

ul.page-summaries li h3 {
    margin-bottom: 0;
    line-height: 1;
}

ul.page-summaries li time {
    font-size: 0.75em;
    margin-top: 0;
    padding-top: 0;
}

ul.page-summaries li p {
    margin-top: 0.1em;
}

/* Forms */

form label input {
    display: block;
}

